added ability to specify thumbnail images in PDFs using [] suffix

--- a/template/public_html/pdfjs/web/viewer.html
+++ b/template/public_html/pdfjs/web/viewer.html
@@ -408,11 +408,14 @@ See https://github.com/adobe-type-tools/cmap-resources
                 fields[0] = '';
                 fields[1] = '';
              }
-
-             PDFViewerApplication.findBar.open ();
-             PDFViewerApplication.findBar.findField.value = fields[1];
-             PDFViewerApplication.findBar.highlightAll.checked = true;
-             PDFViewerApplication.findBar.dispatchEvent('');
+             
+             if (fields[1] != '')
+             {
+                PDFViewerApplication.findBar.open ();
+                PDFViewerApplication.findBar.findField.value = fields[1];
+                PDFViewerApplication.findBar.highlightAll.checked = true;
+                PDFViewerApplication.findBar.dispatchEvent('');
+             }   
           })
        });
     </script>
