--- a/template/public_html/pdfjs/web/viewer.html
+++ b/template/public_html/pdfjs/web/viewer.html
@@ -411,6 +411,7 @@ See https://github.com/adobe-type-tools/cmap-resources
              
              if (fields[1] != '')
              {
+                fields[1] = fields[1].replaceAll ('%20', ' ');
                 PDFViewerApplication.findBar.open ();
                 PDFViewerApplication.findBar.findField.value = fields[1];
                 PDFViewerApplication.findBar.highlightAll.checked = true;
